javascript basic skills.

--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <script src="loop.js">
+    <script src="function_method.js">
         <!-- alert('Hello, world'); -->
     </script>
 </head>
